Add custom 'M' branding
- Add public/logo-m.svg
- Show logo in header and set as favicon
- Add basic styles for brand row

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Collaborative Whiteboard</title>
+  <link rel="icon" type="image/svg+xml" href="/logo-m.svg">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1>Collaborative Whiteboard</h1>
+      <div class="brand">
+        <img src="/logo-m.svg" alt="M Logo" class="logo" width="36" height="36">
+        <h1>Collaborative Whiteboard</h1>
+      </div>
       <div class="tools">
         <button id="clearBtn">Clear Canvas</button>
         <div class="session-info">
